# syn-inline-mod

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
fixtures/example/: foo.rs  lib.rs
fixtures/example/foo/: bar.rs
src/: lib.rs  mod_path.rs  resolver.rs  visitor.rs
tests/: resolver.rs
