[package]
name = "syn-inline-mod"
version = "0.1.1"
authors = ["Ted Driggs <tdriggs@outlook.com>"]
edition = "2018"
repository = "https://github.com/TedDriggs/syn-inline-mod"
documentation = "https://docs.rs/syn-inline-mod/0.1.1"
license = "MIT"
readme = "README.md"
description = "Inlines modules in Rust source code for source analysis"

[dependencies]
syn = { version = "0.15.26", features = ["full", "visit-mut"] }

[dev-dependencies]
quote = "0.6"