[package]
name = "syn-inline-mod"
version = "0.5.0"
authors = ["Ted Driggs <tdriggs@outlook.com>"]
edition = "2018"
repository = "https://github.com/TedDriggs/syn-inline-mod"
documentation = "https://docs.rs/syn-inline-mod/0.5.0"
license = "MIT"
readme = "README.md"
description = "Inlines modules in Rust source code for source analysis"

[dependencies]
# We support syn 1.x and 2.x
syn = { version = ">=1.0.0, <3.0.0", default-features = false, features = ["parsing", "printing", "full", "visit-mut"] }
proc-macro2 = { version = "^1.0.0", default-features = false, features = ["span-locations"] }
quote = "^1.0.0"
